# rust-rdkafka

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  aliases.js  changelog.md  coverage.sh  crates.js  dark.css  docker-compose.yaml  generate_readme.py  index.html  integration_tests.sh  main.js  push_docs.sh  rdkafka.suppressions  readme_template  rustfmt.toml  search-index.js  settings.html  source-files.js  test_ci.sh  test_suite.sh  theme.js  valgrind.macos.suppressions
.github/: dependabot.yml
.github/workflows/: ci.yml  stale.yml
docker/: run_tests.sh
docker/kafka_0.10.1.1/: Dockerfile  config.properties
docker/kafka_0.11.0.0/: Dockerfile  config.properties
docker/kafka_0.11.0.2/: Dockerfile  download-kafka.sh
docker/kafka_1.0.0/: Dockerfile  config.properties
docker/kafka_1.0.2/: Dockerfile  download-kafka.sh
docker/zookeeper/: Dockerfile
examples/: admin_oauthbearer.rs  asynchronous_processing.rs  at_least_once.rs  base_consumer.rs  echo_server.rs  event_consumer.rs  example_utils.rs  futures.rs  metadata.rs  mocking.rs  new_protocol_consumer.rs  oneshot.rs  partition_consumer.rs  roundtrip.rs  runtime_async_std.rs  runtime_smol.rs  seek_partitions.rs  simple_consumer.rs  simple_producer.rs  smol_runtime.rs  threaded_producer.rs  topic_mirror.rs  transactions.rs
implementors/num_enum/: trait.TryFromPrimitive.js
librdkafka-sys/: Cargo.toml  build.rs
librdkafka-sys/src/: lib.rs
rdkafka/: all.html  index.html  sidebar-items.js
rdkafka-sys/: CONTRIBUTING.md  Cargo.toml  README.md  bindings.h  build.rs  changelog.md  readme_template  simple_producer.rs  update-bindings.sh
rdkafka-sys/src/: bindings.rs  helpers.rs  lib.rs  types.rs
rdkafka-sys/src/bindings/: freebsd_64.rs  linux.rs  linux_64.rs  macos.rs  macos_64.rs  mod.rs
rdkafka-sys/tests/: version_check.rs
rdkafka/admin/: enum.ConfigSource.html  enum.OwnedResourceSpecifier.html  enum.ResourceSpecifier.html  enum.TopicReplication.html  index.html  sidebar-items.js  struct.AdminClient.html  struct.AdminOptions.html  struct.AlterConfig.html  struct.ConfigEntry.html  struct.ConfigResource.html  struct.NewPartitions.html  struct.NewTopic.html  type.AlterConfigsResult.html  type.ConfigResourceResult.html  type.PartitionAssignment.html  type.TopicResult.html
rdkafka/client/: ClientContext.t.html  DefaultClientContext.t.html  NativeClient.t.html  index.html  sidebar-items.js  struct.Client.html  struct.DefaultClientContext.html  struct.NativeClient.html  trait.ClientContext.html
rdkafka/config/: ClientConfig.t.html  FromClientConfig.t.html  FromClientConfigAndContext.t.html  NativeClientConfig.t.html  RDKafkaLogLevel.t.html  enum.RDKafkaLogLevel.html  index.html  sidebar-items.js  struct.ClientConfig.html  struct.NativeClientConfig.html  trait.FromClientConfig.html  trait.FromClientConfigAndContext.html
rdkafka/consumer/: CommitMode.t.html  ConsumerContext.t.html  DefaultConsumerContext.t.html  Rebalance.t.html  enum.CommitMode.html  enum.Rebalance.html  enum.RebalanceProtocol.html  index.html  sidebar-items.js  struct.BaseConsumer.html  struct.ConsumerGroupMetadata.html  struct.DefaultConsumerContext.html  struct.MessageStream.html  struct.StreamConsumer.html  trait.Consumer.html  trait.ConsumerContext.html
rdkafka/error/: IsError.t.html  KafkaError.t.html  KafkaResult.t.html  enum.KafkaError.html  enum.RDKafkaError.html  enum.RDKafkaErrorCode.html  index.html  sidebar-items.js  struct.RDKafkaError.html  trait.IsError.html  type.KafkaResult.html
rdkafka/groups/: GroupInfo.t.html  GroupList.t.html  GroupMemberInfo.t.html  index.html  sidebar-items.js  struct.GroupInfo.html  struct.GroupList.html  struct.GroupMemberInfo.html
rdkafka/message/: BorrowedHeaders.t.html  BorrowedMessage.t.html  DeliveryResult.t.html  FromBytes.t.html  Headers.t.html  OwnedHeaders.t.html  OwnedMessage.t.html  Timestamp.t.html  ToBytes.t.html  enum.Timestamp.html  index.html  sidebar-items.js  struct.BorrowedHeaders.html  struct.BorrowedMessage.html  struct.OwnedHeaders.html  struct.OwnedMessage.html  trait.FromBytes.html  trait.Headers.html  trait.Message.html  trait.ToBytes.html  type.DeliveryResult.html
rdkafka/metadata/: MetadataBroker.t.html  MetadataPartition.t.html  MetadataTopic.t.html  index.html  sidebar-items.js  struct.Metadata.html  struct.MetadataBroker.html  struct.MetadataPartition.html  struct.MetadataTopic.html
rdkafka/producer/: index.html  sidebar-items.js  struct.BaseProducer.html  struct.BaseRecord.html  struct.DefaultProducerContext.html  struct.DeliveryFuture.html  struct.FutureProducer.html  struct.FutureRecord.html  struct.ThreadedProducer.html  trait.Producer.html  trait.ProducerContext.html  type.DeliveryResult.html
rdkafka/statistics/: Broker.t.html  ConsumerGroup.t.html  TopicPartition.t.html  index.html  sidebar-items.js  struct.Broker.html  struct.ConsumerGroup.html  struct.ExactlyOnceSemantics.html  struct.Partition.html  struct.Statistics.html  struct.Topic.html  struct.TopicPartition.html  struct.Window.html
rdkafka/topic_partition_list/: Offset.t.html  (+7 more)
rdkafka_sys/: all.html  index.html  sidebar-items.js
src/: admin.rs  client.rs  commit.rs  config.rs  config_map.rs  consumer.rs  error.rs  event_consumer.rs  events.rs  group_description.rs  group_membership.rs  groups.rs  lib.rs  list_consumer_group_offsets.rs  list_offsets_result_info.rs  log.rs  message.rs  metadata.rs  mocking.rs  producer.rs  statistics.rs  stream_consumer.rs  topic_partition_list.rs  util.rs
tests/: admin.rs  base_consumer.rs  base_producer.rs  consumer_groups.rs  containers.rs  future_producer.rs  metadata.rs  produce_consume_base_test.rs  produce_consume_custom_context_test.rs  producer.rs  stream_consumers.rs  test_admin.rs  test_consumers.rs  test_high_consumers.rs  test_high_level_clients.rs  test_high_producers.rs  test_low_consumers.rs  test_low_producers.rs  test_metadata.rs  test_producers.rs  test_topic_partition_list.rs  test_transactions.rs  test_utils.rs  topic_partition_lists.rs  transactions.rs  utils.rs
(+5449 files in other folders)
