[package]
name = "rdkafka"
version = "0.38.0"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
repository = "https://github.com/fede1024/rust-rdkafka"
readme = "README.md"
license = "MIT"
description = "Rust wrapper for librdkafka"
keywords = ["kafka", "rdkafka"]
categories = ["api-bindings"]
edition = "2021"
exclude = ["Cargo.lock"]
rust-version = "1.74"

[workspace]
members = ["rdkafka-sys"]

[dependencies]
rdkafka-sys = { path = "rdkafka-sys", version = "4.9.0", default-features = false }
futures-channel = "0.3.31"
futures-executor = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", default-features = false }
libc = "0.2.172"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
slab = "0.4"
tokio = { version = "1.45.0", features = ["rt", "time"], optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
backon = { version = "1.5.0", default-features = false, features = ["std-blocking-sleep"] }
chrono = "0.4.41"
clap = "4.5.38"
env_logger = "0.11.8"
futures = "0.3.31"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.9.1"
regex = "1.11.1"
smol = "2.0.2"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "time"] }

# These features are re-exports of the features that the rdkafka-sys crate
# provides. See the rdkafka-sys documentation for details.
[features]
default = ["libz", "tokio"]
naive-runtime = ["futures-executor"]
cmake-build = ["rdkafka-sys/cmake-build"]
cmake_build = ["rdkafka-sys/cmake_build"]
dynamic-linking = ["rdkafka-sys/dynamic-linking"]
dynamic_linking = ["rdkafka-sys/dynamic_linking"]
ssl = ["rdkafka-sys/ssl"]
ssl-vendored = ["rdkafka-sys/ssl-vendored"]
gssapi = ["rdkafka-sys/gssapi"]
gssapi-vendored = ["rdkafka-sys/gssapi-vendored"]
sasl = ["rdkafka-sys/sasl"]
libz = ["rdkafka-sys/libz"]
libz-static = ["rdkafka-sys/libz-static"]
curl = ["rdkafka-sys/curl"]
curl-static = ["rdkafka-sys/curl-static"]
zstd = ["rdkafka-sys/zstd"]
zstd-pkg-config = ["rdkafka-sys/zstd-pkg-config"]
external-lz4 = ["rdkafka-sys/external-lz4"]
external_lz4 = ["rdkafka-sys/external_lz4"]
static-linking = ["rdkafka-sys/static-linking"]

[package.metadata.docs.rs]
# docs.rs doesn't allow writing to ~/.cargo/registry (reasonably), so we have to
# use the CMake build for a proper out-of-tree build.
features = ["cmake-build", "naive-runtime", "tracing", "tokio"]
rustdoc-args = ["--cfg", "docsrs"]
