[package]
name = "librdkafka-sys"
version = "0.9.1-1"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
build = "build.rs"
links = "rdkafka"
repository = "https://github.com/fede1024/rust-rdkafka"
license = "MIT"
description = "Native bindings to the librdkafka library"
keywords = ["kafka", "rdkafka"]

[dependencies]

[build-dependencies]
num_cpus = "0.2"

[lib]
name = "librdkafka_sys"
path = "src/lib.rs"
