[package]
name = "rdkafka-sys"
version = "1.2.1"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
build = "build.rs"
links = "rdkafka"
repository = "https://github.com/fede1024/rust-rdkafka"
license = "MIT"
description = "Native bindings to the librdkafka library"
keywords = ["kafka", "rdkafka"]
categories = ["external-ffi-bindings"]

[dependencies]
libc = "0.2.65"
libz-sys = "1.0"
zstd-sys = { version = "1.3", features = [], optional = true }
openssl-sys = { version = "~ 0.9.0", optional = true }
lz4-sys = { version = "1.8.3", optional = true }

[build-dependencies]
num_cpus = "0.2.0"
pkg-config = "0.3.9"
cmake = { version = "^0.1", optional = true }

[lib]
name = "rdkafka_sys"
path = "src/lib.rs"

[features]
default = []

# Enable ssl and sasl support
ssl = ["openssl-sys"]
sasl = ["ssl"]

# Use dynamic linking instead of static. Will fail if librdkafka is not installed.
dynamic_linking = []

# Use external library for lz4. Use internal if not enabled.
external_lz4 = ["lz4-sys"]

# Enable support for zstd compression.
zstd = ["zstd-sys"]
zstd-pkg-config = ["zstd-sys/pkg-config"]

cmake_build = ["cmake"]
